--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,23 +10,23 @@ jobs:
     release:
         runs-on: ubuntu-latest
         steps:
-        -
+          -
             name: Checkout
             uses: actions/checkout@v1
-        -
-            name: Dockerhub login
-            env:
-                GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-                GITHUB_USERNAME: ${{ github.actor }}
-            run: |
-                echo "${GITHUB_TOKEN}" | docker login ghcr.io --username ${GITHUB_USERNAME} --password-stdin
-        -
+          -
+            name: Login to GitHub Packages Docker Registry
+            uses: docker/login-action@v1
+            with:
+              registry: docker.pkg.github.com
+              username: ${{ github.repository_owner }}
+              password: ${{ secrets.GITHUB_TOKEN }}
+          -
             name: Set up Docker Buildx
             id: buildx
             uses: crazy-max/ghaction-docker-buildx@v1
             with:
                 version: latest
-        -
+          -
             name: Build dockerfile (with push)
             run: |
                 docker buildx build \
